繼續跟著ai給的流程走下去,目前到一半,且有了自己的初步總結

--- a/notepad/開發模仿流程.md
+++ b/notepad/開發模仿流程.md
@@ -1,8 +1,9 @@
 很好，你的備忘錄和 `.cursorrules` 寫得已經非常「專業工程師」了，其實你只差「照流程執行一次」而已。下面我會用你定義的 Room A/B/C 架構，模擬一個專業 React 開發者，**從設計圖到 Vite+React idle game MVP** 的完整流程與「腦中在想什麼」，你可以一步步模仿。
 
 我會拆成幾大階段，每一階段都講三件事：  
-1. **這一步要做什麼**  
-2. **腦中真正的思路（像專業開發者的自言自語）**  
+
+1. **這一步要做什麼**
+2. **腦中真正的思路（像專業開發者的自言自語）**
 3. **你可以立刻去做的 TODO（不寫實作，只說任務）**
 
 ---
@@ -22,7 +23,7 @@
 你現在的備忘錄已經有：
 
 - 目前核心流程：  
-  點進網站 → 點餅乾 → 買建築 → 產更多餅乾 → 再買…
+點進網站 → 點餅乾 → 買建築 → 產更多餅乾 → 再買…
 - 未來必加功能：離線收益、全球榜單、黃金餅乾…  
 - 一份「10 分鐘後玩家資料」的 JSON 範例
 
@@ -34,7 +35,6 @@
   - 建築會自動生產餅乾（即使先用很簡單的計算）
   - 基本 UI 能顯示：目前餅乾數、建築數量
   - 可以在重新整理頁面後，從 `localStorage` 載回進度（最粗糙的存檔）
-
 - **先不做（放到 Future）：**
   - 離線收益
   - 全球榜單
@@ -74,7 +74,6 @@
 **3. 你可以做的 TODO（規劃層級，先不用寫 code）**
 
 - 寫一張表（可以在 `備忘錄.md`）：
-
   - **CookieButton**
     - 顯示一顆大餅乾
     - Props: `onClick`, `disabled`
@@ -127,7 +126,6 @@
 **3. 你可以做的 TODO**
 
 - 在 `備忘錄.md` 或另一份筆記裡寫清楚：
-
   - **Room A（State）固定欄位有哪些？**
     - `cookies: number`
     - `buildings: { grandma: number; factory: number; ... }`
@@ -164,15 +162,15 @@
 **3. 你可以做的 TODO**
 
 - 寫一份「規則書草稿」（先文字就好）：
-  - `grandma`：
-    - basePrice: 100
-    - baseCps（每秒餅乾）：1
-  - `factory`：
-    - basePrice: 1000
-    - baseCps: 10
-  - 點擊：
+  - `grandma`**：**
+    - **basePrice: 100**
+    - **baseCps（每秒餅乾）：1**
+  - `factory`**：**
+    - **basePrice: 1000**
+    - **baseCps: 10**
+  - **點擊：**
     - `baseClick = 1`
-    - `clickerLevel` 每升 1，多 +1 或乘倍率
+    - `clickerLevel` **每升 1，多 +1 或乘倍率**
 
 ---
 
@@ -181,7 +179,6 @@
 **1. 要做什麼**
 
 - 列出 Room B（`useGameLogic` 這類 hooks）需要負責的「問題清單」：
-
   - 玩家點擊餅乾時，**要改變哪些 State？**
   - 玩家想買建築時，**怎麼判斷夠不夠錢？價格怎麼算？**
   - 每秒鐘經過時，**要依建築數量增加多少餅乾？**
@@ -204,10 +201,9 @@
 **3. 你可以做的 TODO（邏輯 API 設計）**
 
 - 列出預計在 `useGameLogic` 或相關 hooks 中提供給 UI 使用的「函式介面」：
-
   - `handleClickCookie()`：被 UI 呼叫，內部會：
     - 根據 `clickerLevel` 算「這次點擊多少餅乾」
-    - 呼叫 store：`addCookies(amount)`  
+    - 呼叫 store：`addCookies(amount)`
   - `tryBuyBuilding(buildingKey)`：
     - 算出目前這棟建築價格（看 constants + 目前擁有數）
     - 判斷 `cookies >= price`：
@@ -239,7 +235,6 @@
 **3. 你可以做的 TODO**
 
 - 在筆記中設計 `useGameStore` 的「介面」：
-
   - State：
     - `cookies`
     - `buildings`
@@ -268,7 +263,7 @@
   - `src/hooks/`
   - `src/components/`
 - 腦中重點：  
-  「**先讓 skeleton 跑起來**，什麼都空白沒關係，只要跑得起來就好。」
+「**先讓 skeleton 跑起來**，什麼都空白沒關係，只要跑得起來就好。」
 
 #### 步驟 2：先做 **最小 UI 流程**（只做點擊餅乾）
 
@@ -277,14 +272,14 @@
 - 邏輯層暫時先直接寫在同一檔案也沒關係，**只要 UI 行為是對的**：
   - 點一下餅乾，數字 +1。
 - 腦中重點：  
-  「我先確定從滑鼠點擊 → 畫面數字變動，這條線通順。之後再做乾淨的 Room A/B/C 拆分。」
+「我先確定從滑鼠點擊 → 畫面數字變動，這條線通順。之後再做乾淨的 Room A/B/C 拆分。」
 
 #### 步驟 3：導入 Room A（Store）+ Room C（UI）真正分離
 
 - 把 `useState` 搬到 `useGameStore`（Zustand 或 Context）。
 - UI 改成從 Store 讀 `cookies`，並呼叫 `addCookies` 來更新。
 - 腦中重點：  
-  「我現在要確保：UI **完全不再自己管理 cookies**，一切都透過 Store。」
+「我現在要確保：UI **完全不再自己管理 cookies**，一切都透過 Store。」
 
 #### 步驟 4：導入 Room B（邏輯）處理「點擊計算」
 
@@ -295,7 +290,7 @@
   - 用 constants 算出這次點擊量
   - 呼叫 Store action 更新
 - 腦中重點：  
-  「從現在開始，UI 只知道『玩家點了』，不知道『該加多少』。」
+「從現在開始，UI 只知道『玩家點了』，不知道『該加多少』。」
 
 #### 步驟 5：加上建築購買流程（只做一種建築也可以）
 
@@ -307,7 +302,7 @@
   - 用 constants 算價格。
   - 判斷夠不夠錢。
 - 腦中重點：  
-  「我要先確保『買東西 → 錢變少 → 數量變多』這條線是通的，再來考慮匯率（價格曲線）、特效。」
+「我要先確保『買東西 → 錢變少 → 數量變多』這條線是通的，再來考慮匯率（價格曲線）、特效。」
 
 #### 步驟 6：加上自動生產（遊戲真正變「idle」）
 
@@ -317,7 +312,7 @@
   - 用 constants 算出該時間段應該產生多少餅乾，
   - 呼叫 Store `addCookies(amount)`。
 - 腦中重點：  
-  「我在做的是一個簡化的『物理引擎 tick』，我要確保：
+「我在做的是一個簡化的『物理引擎 tick』，我要確保：
   - 不會重複註冊太多 interval
   - 在組件 unmount 時有清掉
   - 產生的量可以透過 constants 調整」
@@ -330,7 +325,7 @@
 - 畫面上：
   - 先簡單：進遊戲時自動 `loadGame`，每 X 秒自動 `saveGame`。
 - 腦中重點：  
-  「這是 MVP 版的存檔，不考慮安全性、不考慮多人，先讓玩家重新整理後不會全部歸零。」
+「這是 MVP 版的存檔，不考慮安全性、不考慮多人，先讓玩家重新整理後不會全部歸零。」
 
 ---
 
@@ -375,9 +370,9 @@
 因為現在是 Ask mode，我不能直接幫你改檔案，但如果你願意：
 
 - 你可以先告訴我：  
-  「我現在在第幾步？」（例如：剛用 Vite 建好專案、還沒任何 code）  
+「我現在在第幾步？」（例如：剛用 Vite 建好專案、還沒任何 code）  
 - 然後我可以用「專業開發者的思路 + 偽代碼」帶你 **一步步實作下一小步**，例如：
   - 怎麼設計 `useGameStore` 的介面（不綁特定工具）
-  - 怎麼把你「點擊流程 1–8 步」翻成 Room A/B/C 的實際呼叫順序  
+  - 怎麼把你「點擊流程 1–8 步」翻成 Room A/B/C 的實際呼叫順序
 
 你可以先選一個你想從哪一步開始練「模仿專業開發者流程」，我就從那一步開始帶你。
