更新最新流程結論

--- a/notepad/目前開發流程總結.md
+++ b/notepad/目前開發流程總結.md
@@ -6,3 +6,36 @@
 然後準備工作就好了
 爆破,隨便亂寫,全部擠一起功能實現就好
 分類,然後整理乾淨
+
+//要有三個房間的概念
+
+**重點在寫出詳細流程**  
+首先先寫下全部你想像到的功能
+
+然後分成mvp(一個),未來必定加入,不一定要加入
+
+將mvp功能寫成主要流程概念(概念圖,人家問網站在做什麼,你就這個給他看)
+
+然後寫下mvp的詳細流程(可能有多個流程),且一邊決定UI位置,用使用者的角度來想,某按鈕按下後要怎麼變化,然後寫下詳細如何執行的邏輯。寫完後你會有完整的元素
+
+(這裡如果有經驗就可以直接試做來驗證再繼續)
+
+然後拿著這些元素寫規則,每個元素之間的數值的關係。弄完後你會發現有些是可以推導出來的,有些無法,精簡他,盡量只保留最少的東西,其他都是推導出來的，這時你就可以得到真正要放在store的東西
+
+參考寫法(最終整理後長的樣子)  
+ui是要寫出東西在哪,[text](UI.md)
+logic是要有函式,跟他們是在做什麼,[text](logic.md)
+store則是規劃出要放的資料(剛剛已經做過),方便存取的函式[text](Store API 設計範例.md)
+
+然後就基本上直接寫就可以寫完了,
+然後就測試
+
+後續功能的增加也是基於:用使用者角度寫下詳細流程
+
+自己從頭來一次
+
+
+
+其實重點應該就是++**在寫出詳細流程而已**++
+
+又想了一下,其實只要列出詳細流程應該就可以了,分成三個房間只是方便理解和管理而已
